--- a/6.3+CSS+Box+Model/6.3 CSS Box Model/index.html
+++ b/6.3+CSS+Box+Model/6.3 CSS Box Model/index.html
@@ -1,19 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <title>CSS Box Model</title>
+    <style>
+      /* Write your CSS code here */
+      div {
+        height: 200px;
+        width: 200px;
+      }
+      p {
+        margin: 0;
+      }
+      .first {
+        background: cadetblue;
+        outline: 10px solid black;
+        padding: 20px;
+      }
+      .second {
+        background: gold;
+        border: solid black;
+        border-width: 20px 10px;
+        margin-left: 250px;
+        margin-top: 10px;
+      }
+      .third {
+        background: indianred;
+        border: 10px solid black;
+        margin-left: 30px;
+      }
+    </style>
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <title>CSS Box Model</title>
-  <style>
-    /* Write your CSS code here */
+  <body>
+    <div class="first">
+      <p class="text">
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam at sapien porttitor urna elementum lacinia. In
+        id magna pulvinar, ultricies lorem id, vehicula elit. Aliquam eu luctus nisl, vitae pellentesque magna.
+        Phasellus dolor metus, laoreet ac convallis sit amet, efficitur sed dolor.
+      </p>
+    </div>
 
-  </style>
-</head>
+    <div class="second"></div>
 
-<body>
+    <div class="third"></div>
 
-
-  <!-- TODOs:
+    <!-- TODOs:
 1. Create 3 Boxes using the div element.
 2. Set their sizes to 200px heigh by 200px wide.
 3. Set different background colors for each of the boxes (I used cadetblue, gold and indianred).
@@ -28,7 +60,5 @@ Hint: Use the CSS inspector in Chrome.
 8. Set the 3rd div to have a 10px border 
 9. Set the margins for the divs so that each box corner touches the other. (See the goal image)
 -->
-
-</body>
-
+  </body>
 </html>
