--- a/7.2+CSS+Positioning/7.2 CSS Positioning/index.html
+++ b/7.2+CSS+Positioning/7.2 CSS Positioning/index.html
@@ -1,19 +1,27 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <title>CSS Positioning Exercise</title>
+    <style>
+      /* Write your code here */
+      .red-circle {
+        height: 200px;
+        width: 200px;
+        background-color: red;
+        border-radius: 50%;
+      }
 
-<head>
-  <title>CSS Positioning Exercise</title>
-  <style>
-    /* Write your code here */
-  </style>
-</head>
+      .blue-box {
+        height: 300px;
+        width: 500px;
+        background-color: blue;
+      }
+    </style>
+  </head>
 
-<body>
-  <div class="blue-box">
-    <div class="red-circle">
+  <body>
+    <div class="blue-box">
+      <div class="red-circle"></div>
     </div>
-  </div>
-
-</body>
-
+  </body>
 </html>
