--- a/7.2+CSS+Positioning/7.2 CSS Positioning/index.html
+++ b/7.2+CSS+Positioning/7.2 CSS Positioning/index.html
@@ -9,12 +9,18 @@
         width: 200px;
         background-color: red;
         border-radius: 50%;
+        position: relative;
+        top: 150px;
+        left: 250px;
       }
 
       .blue-box {
         height: 300px;
         width: 500px;
         background-color: blue;
+        position: absolute;
+        top: 200px;
+        left: 200px;
       }
     </style>
   </head>
