--- a/7.3+Flag+Project/7.3 CSS Flag Project/index.html
+++ b/7.3+Flag+Project/7.3 CSS Flag Project/index.html
@@ -1,16 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <title>CSS Flag Project</title>
+    <style>
+      /* Red rectangle */
+      .flag {
+        position: absolute;
+        width: 900px;
+        height: 600px;
+        background-color: #ce1126;
+        position: relative;
+        color: white;
+      }
 
-<head>
-  <meta charset="UTF-8">
-  <title>CSS Flag Project</title>
-  <style>
-    /* Write your CSS Code here */
-    
-  </style>
-</head>
+      /* Blue rectangle*/
+      .flag > div {
+        background-color: #002868;
+        width: 100%;
+        height: 300px;
+        position: absolute;
+        top: 150px;
+      }
 
-<!-- 
+      /* White Circle */
+      .flag > div > div {
+        position: relative;
+        height: 200px;
+        width: 200px;
+        border-radius: 50%;
+        background-color: white;
+        top: 50px;
+        left: 350px;
+        color: black;
+      }
+
+      p {
+        margin: 0;
+        font-size: 5rem;
+        text-align: center;
+      }
+    </style>
+  </head>
+
+  <!-- 
   IMPORTANT! Do not change any HTML
 Don't add any classes/ids/elements 
 Use what you know about combining selectors 
@@ -20,15 +53,14 @@ Hint 2: You can use CSS inspection to get the colors from
 https://appbrewery.github.io/flag-of-laos/
 -->
 
-<body>
-  <div class="flag">
-    <p>The Flag</p>
-    <div>
+  <body>
+    <div class="flag">
+      <p>The Flag</p>
       <div>
-        <p>of Laos</p>
+        <div>
+          <p>of Laos</p>
+        </div>
       </div>
     </div>
-  </div>
-</body>
-
+  </body>
 </html>
