--- a/9.0+Display+Flex/9.0 Display Flex/index.html
+++ b/9.0+Display+Flex/9.0 Display Flex/index.html
@@ -19,6 +19,10 @@
     .container {
       padding: 10px;
       background-color: gold;
+      display: flex;
+      gap: 1rem
+      ;
+      
     }
 
   </style>
