--- a/9.4+Flexbox+Pricing+Table+Project/index.html
+++ b/9.4+Flexbox+Pricing+Table+Project/index.html
@@ -4,15 +4,53 @@
     <title>Flexbox Pricing Table</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Sono:wght@400;700&display=swap"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Sono:wght@400;700&display=swap" rel="stylesheet" />
     <style>
       body {
         font-family: "Sono", sans-serif;
       }
 
+      .pricing-container {
+        display: flex;
+        gap: 20px;
+        justify-content: center;
+        align-items: center;
+        height: 100vh;
+      }
+
+      .pricing-plan {
+        background-color: rgb(234, 235, 234);
+        text-align: center;
+        font-size: 1rem;
+        padding: 25px;
+        border-radius: 2%;
+      }
+
+      .plan-title {
+        font-weight: bold;
+        font-size: 1.5rem;
+        margin-bottom: 5px;
+      }
+
+      .plan-price {
+        font-weight: bold;
+        font-size: 3rem;
+      }
+
+      li {
+        padding-bottom: 15px;
+      }
+      .plan-features {
+        padding: 0;
+        margin: 0;
+      }
+      .plan-button {
+        background-color: orangered;
+        padding: 10px;
+        border-radius: 10%;
+        border-color: transparent;
+        color: white;
+      }
       /* Hint: What can you do with a media query and flexbox? */
       @media (max-width: 1250px) {
       }
@@ -24,7 +62,7 @@
       <div class="pricing-plan">
         <div class="plan-title">Basic</div>
         <div class="plan-price">$9.99/month</div>
-        <ul class="plan-features">
+        <ul class="plan-features" type="none">
           <li>✅ 10GB Storage</li>
           <li>✅ 1 User</li>
           <li>🚫 Support</li>
@@ -34,7 +72,7 @@
       <div class="pricing-plan">
         <div class="plan-title">Standard</div>
         <div class="plan-price">$19.99/month</div>
-        <ul class="plan-features">
+        <ul class="plan-features" type="none">
           <li>✅ 50GB Storage</li>
           <li>✅ 5 Users</li>
           <li>✅ Phone &amp; Email Support</li>
@@ -44,7 +82,7 @@
       <div class="pricing-plan">
         <div class="plan-title">Premium</div>
         <div class="plan-price">$49.99/month</div>
-        <ul class="plan-features">
+        <ul class="plan-features" type="none">
           <li>✅ 100GB Storage</li>
           <li>✅ 10 Users</li>
           <li>✅ 24/7 Support</li>
